--- a/app/app/src/main/res/layout/activity_main.xml
+++ b/app/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,29 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/pageWait"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/wait" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:indeterminate="true" />
+
+        </LinearLayout>
+
+        <LinearLayout
             android:id="@+id/pageKey"
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -56,7 +79,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/padding"
-                android:text="01010101010110101"
+                android:text="00101010"
                 android:textColor="#4CAF50" />
 
         </LinearLayout>
