--- a/app/app/src/main/res/layout/activity_main.xml
+++ b/app/app/src/main/res/layout/activity_main.xml
@@ -58,6 +58,7 @@
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:keepScreenOn="true"
                 android:paddingLeft="@dimen/padding"
                 android:paddingRight="@dimen/padding" />
 
